# flask-kickstart

./: .gitignore  README.md  pyproject.toml
docs/: index.md
kickstart/: maths.py
src/: myconfig.json  run.py  settings.json
src/kickstart/: __init__.py  application.py  blueprint.py  hatcher.py  project.py
src/kickstart/config/: settings.json
src/kickstart/templates/: app.tmpl  base.tmpl  bp_init.tmpl  index.tmpl  models.tmpl  readme.tmpl  routes.tmpl  run.tmpl
